edpdgen_lib/src/input_parsers/snapshots/edpdgen_lib__input_parsers__tests__word_data_tests___0.snap
---
source: edpdgen_lib/src/input_parsers/mod.rs
expression: word_data

---
  <hr />
  <div>
    <h4 id="ābādha_dpd">ābādha</h4>
    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>ābādho</span></td></tr><tr><td>Grammar</td><td><span>m, abstr, from ābādhati*</span></td></tr><tr><td>English</td><td><span><strong>disease, sickness, illness, affliction</strong></span></td></tr><tr><td>Literal Meaning</td><td><span>LM1</span></td></tr><tr><td>Root In Compounds</td><td><span>RiC1</span></td></tr><tr><td>Family</td><td><span>ā √bādh</span></td></tr><tr><td>Root</td><td><span>√bādh<sup>･</sup>1.1 a (to press, oppress)</span></td></tr><tr><td>Construction</td><td><span>ā + √bādh + a</span></td></tr><tr><td>Derivative</td><td><span>kitaka (a)</span></td></tr><tr><td>Sanskrit</td><td><span>ābādha</span></td></tr><tr><td>Sanskrit Root</td><td><span>√bādh</span></td></tr></tbody>
    </table>
    <br /><span>so aparena samayena tamhā <b>ābādhā</b> mucceyya</span><br /><span class="sutta-source-dpd"><i>DN 2.19 sāmaññaphalasuttaṃ</i></span><br /><br /><span>saṅkhārā ca h'idaṃ, bhikkhave, attā abhavissaṃsu, na'y'idaṃ saṅkhārā <b>ābādhāya</b> saṃvatteyyuṃ, labbhetha ca saṅkhāresu, evaṃ me saṅkhārā hontu, evaṃ me saṅkhārā mā ahesun'ti.</span><br /><span class="sutta-source-dpd"><i>SN 22.59 anattalakkhaṇasuttaṃ</i></span><br /><br /></div>

