edpdgen_lib/src/input_parsers/snapshots/edpdgen_lib__input_parsers__tests__word_data_tests___12.snap
---
source: edpdgen_lib/src/input_parsers/mod.rs
expression: word_data

---

  <hr />
  <div>
    <h4 id="adhikāra_4_dpd">adhikāra 4</h4>
    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>adhikāro</span></td></tr><tr><td>Grammar</td><td><span>m</span></td></tr><tr><td>English</td><td><span><strong>oh we love tests</strong></span></td></tr><tr><td>Family</td><td><span>adhi √kar</span></td></tr><tr><td>Root</td><td><span>0<sup>0</sup>0 o (0)</span></td></tr><tr><td>Construction</td><td><span>adhi + √kar > kār + *a</span></td></tr><tr><td>Derivative</td><td><span>kitaka (*a)</span></td></tr><tr><td>Sanskrit</td><td><span>adhikāra</span></td></tr><tr><td>Sanskrit Root</td><td><span>0</span></td></tr></tbody>
    </table>
    <br /></div>

