edpdgen_lib/src/input_parsers/snapshots/edpdgen_lib__input_parsers__tests__word_data_tests___2.snap
---
source: edpdgen_lib/src/input_parsers/mod.rs
expression: word_data

---
  <hr />
  <div>
    <h4 id="ābādhika_dpd">ābādhika</h4>
    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>ābādhiko</span></td></tr><tr><td>Grammar</td><td><span>m, agent, from ābādha</span></td></tr><tr><td>English</td><td><span><strong>sick person, ill man</strong></span></td></tr><tr><td>Literal Meaning</td><td><span>LM3</span></td></tr><tr><td>Root In Compounds</td><td><span>RiC3</span></td></tr><tr><td>Family</td><td><span>ā √bādh</span></td></tr><tr><td>Root</td><td><span>√bādh<sup>･</sup>1.1 a (to press, oppress)</span></td></tr><tr><td>Construction</td><td><span>ā + √bādh + a + ika<br/>ābādha + ika</span></td></tr><tr><td>Derivative</td><td><span>taddhita (ika)</span></td></tr><tr><td>Sanskrit</td><td><span>ābādha + ika</span></td></tr><tr><td>Sanskrit Root</td><td><span>√bādh</span></td></tr></tbody>
    </table>
    <br /><span>ahaṃ kho pubbe <b>ābādhiko</b> ahosiṃ dukkhito bāḷhagilāno, bhattañ'ca me nacchādesi, na ca me āsi kāye balamattā</span><br /><span class="sutta-source-dpd"><i>MN 39 mahāassapurasuttaṃ</i></span><br /><br /><span>ambho purisa, na tvaṃ addasa manussesu itthiṃ vā purisaṃ vā <b>ābādhikaṃ</b> dukkhitaṃ bāḷhagilānaṃ, sake muttakarīse palipannaṃ semānaṃ, aññehi vuṭṭhāpiyamānaṃ, aññehi saṃvesiyamānan'ti?</span><br /><span class="sutta-source-dpd"><i>AN 3.36 devadūtasuttaṃ</i></span><br /><br /></div>

