edpdgen_lib/src/input_parsers/snapshots/edpdgen_lib__input_parsers__tests__word_data_tests___6.snap
---
source: edpdgen_lib/src/input_parsers/mod.rs
expression: word_data

---
  <hr />
  <div>
    <h4 id="abala_2_dpd">abala 2</h4>
    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>abala</span></td></tr><tr><td>Grammar</td><td><span>adj, from bala, neg</span></td></tr><tr><td>English</td><td><span><strong>weak, feeble, not strong, not powerful</strong></span></td></tr><tr><td></td><td><span>lit. LM7</span></td></tr><tr><td>Family</td><td><span>√bal</span></td></tr><tr><td>Root</td><td><span>√bal<sup>×</sup>1.1 a (to be strong, live)&nbsp;RiC7&nbsp;in comps</span></td></tr><tr><td>Construction</td><td><span>na + √bal + a</span></td></tr><tr><td>Derivative</td><td><span>kitaka (a)</span></td></tr><tr><td>Compound</td><td><span>kammadhāraya </span></td></tr><tr><td>Antonym</td><td><span>bala</span></td></tr><tr><td>Sanskrit</td><td><span>abala</span></td></tr><tr><td>Sanskrit Root</td><td><span>√bal</span></td></tr></tbody>
    </table>
    <br /><span>so vata, bhikkhave, bhikkhu ime pañca āvaraṇe nīvaraṇe cetaso ajjhāruhe paññāya dubbalīkaraṇe appahāya, <b>abalāya</b> paññāya dubbalāya att'atthaṃ vā ñassati</span><br /><span class="sutta-source-dpd"><i>AN 5.51 āvaraṇasuttaṃ</i></span><br /><br /><span>jiṇṇo'ham'asmi <b>abalo</b> vītavaṇṇo,<br/>nettā na suddhā savanaṃ na phāsu,<br/>m'āhaṃ nassaṃ momuho antarāva,<br/>ācikkha dhammaṃ yam'ahaṃ vijaññaṃ,<br/>jātijarāya idha vippahānaṃ.</span><br /><span class="sutta-source-dpd"><i>SNP 71 piṅgiya māṇava pucchā<br/>pārāyanavaggo 16</i></span><br /><br /></div>
<br/>
<a class="dictionary-feedback-link-dpd" href="fb_url?entry.267696921=host url&entry.1433863141=host version" target="_blank">spot a mistake in the dictionary? fix it here!</a>

