edpdgen_lib/src/input_parsers/snapshots/edpdgen_lib__input_parsers__tests__word_data_tests___7.snap
---
source: edpdgen_lib/src/input_parsers/mod.rs
expression: word_data

---
  <hr />
  <div>
    <h4 id="abalabala_dpd">abalabala</h4>
    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>abalabala</span></td></tr><tr><td>Grammar</td><td><span>adj, comp</span></td></tr><tr><td>English</td><td><span><strong>weak and strong</strong></span></td></tr><tr><td>Family</td><td><span>√bala</span></td></tr><tr><td>Root</td><td><span>√bal<sup>×</sup>1.1 a (to be strong, live)</span></td></tr><tr><td>Construction</td><td><span>abala + bala</span></td></tr><tr><td>Compound</td><td><span>dvanda (abala <b>ca </b>bala <b>ca</b>)</span></td></tr><tr><td>Sanskrit</td><td><span>abala + bala</span></td></tr><tr><td>Sanskrit Root</td><td><span>√bal</span></td></tr></tbody>
    </table>
    <br /><span>nivatth'avatthen'eva gehato nikkhamitvā paramasallekhavuttiko'pi <b>abalabalo</b> amandamando viya paresaṃ acittakarūpena hīḷitaparibhūto hutvā gāmanigamarājadhānīsu ekarattivāsen'eva vicarati.</span><br /><span class="sutta-source-dpd"><i>CPa 3.15 mahālomahaṃsacariyāvaṇṇanā</i></span><br /><br /></div>

